@@ -36,6 +36,9 @@ class BaseSearchlight(Measure):
     roi_sizes = ConditionalAttribute(enabled=False,
         doc="Number of features in each ROI.")
 
+    roi_feature_ids = ConditionalAttribute(enabled=False,
+        doc="Feature IDs for all generated ROIs.")
+
     is_trained = True
     """Indicate that this measure is always trained."""
 
@@ -247,12 +250,14 @@ class Searchlight(BaseSearchlight):
         # but be careful: this call also serves as conversion from parallel maps
         # to regular lists!
         # this uses the Dataset-hstack
-        results = hstack(results)
+        result_ds = hstack(results)
+        if self.ca.is_enabled('roi_feature_ids'):
+            self.ca.roi_feature_ids = [r.a.roi_feature_ids for r in results]
 
         if __debug__:
-            debug('SLC', " hstacked shape %s" % (results.shape,))
+            debug('SLC', " hstacked shape %s" % (result_ds.shape,))
 
-        return results, roi_sizes
+        return result_ds, roi_sizes
 
 
     def _proc_block(self, block, ds, measure):
@@ -288,7 +293,12 @@ class Searchlight(BaseSearchlight):
                 roi.fa[self.__add_center_fa] = roi_seed
 
             # compute the datameasure and store in results
-            results.append(measure(roi))
+            res = measure(roi)
+            if self.ca.is_enabled('roi_feature_ids'):
+                # add roi feature ids to intermediate result dataset for later
+                # aggregation
+                res.a['roi_feature_ids'] = roi_fids
+            results.append(res)
 
             # store the size of the roi dataset
             if not roi_sizes is None:
